<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MEeTRO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_decide_name">ユーザ名を入力してください。</string>
    <string name="label_save_name">保存する</string>
    <string name="decide_train">電車を決める</string>
    <string name="enter_room">部屋に入る</string>
    <string name="make_room">部屋を作る</string>
    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>
    <string name="label_railway">路線</string>
    <string name="label_startst">乗車駅</string>
    <string name="label_endst">下車駅</string>
    <string name="label_ridetime">出発</string>
    <string name="label_arrivetime">到着</string>
    <string name="label_carnum">車両番号</string>
    <string name="label_train_search">電車を検索</string>
    <string name="label_decide_time">この時間で待ち合わせる</string>
    <string name="label_complete">このURLを待ち合わせする人にシェアしてください。</string>
    <string name="label_copy_url">URLをコピー</string>
    <string name="label_send_by_line">LINEで送る</string>
    <string name="label_new_room">＋</string>
    <string name="label_sorry_late">遅れます通知を送る</string>
    <string name="label_car_num">待ち合わせ場所</string>
    <string name="label_select_station">待ち合わせる</string>
    <string name="label_decide_station">この駅から乗車する</string>
    
    <array name="menuList">
        <item>ホーム</item>
        <item>部屋を作る</item>
        <item>部屋に入る</item>
        <!--<item>チュートリアル</item>-->
        <!--<item>使い方</item>-->
        <!--<item>ご意見・ご要望</item>-->
        <!--<item>開発者について</item>-->
    </array>

</resources>