<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout
        android:id="@+id/left_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/label_complete" />

        <TextView
            android:id="@+id/roomUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:background="@drawable/bgr_url"
            android:autoText="true" />

        <Button
            android:id="@+id/copyUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/label_copy_url" />
        <Button
            android:id="@+id/sendByLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/label_send_by_line" />
        <Button
            android:id="@+id/enterRoom"
            android:enabled="true"
            android:text="@string/enter_room"
            style="@style/common_btn" />
        </LinearLayout>

    <!-- Navigation Drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#eee"
        android:choiceMode="singleChoice" />

</android.support.v4.widget.DrawerLayout>