<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout
        android:id="@+id/left_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/left_draw_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp" >

            <TextView
                android:id="@+id/labelRailway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_railway" />

            <Spinner
                android:id="@+id/spinnerRailway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left_draw_startst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp" >

            <TextView
                android:id="@+id/labelStartSt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_startst" />

            <Spinner
                android:id="@+id/spinnerStartSt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left_draw_endst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30dp" >

            <TextView
                android:id="@+id/labelEndSt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_endst" />

            <Spinner
                android:id="@+id/spinnerDestSt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioTimeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_ridetime" />

            <RadioButton
                android:id="@+id/radioArrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_arrivetime" />
        </RadioGroup>

        <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/timeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/buttonTrainSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_train_search"
            style="@style/common_btn" />

    </LinearLayout>

    <!-- Navigation Drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#eee"
        android:choiceMode="singleChoice" />

</android.support.v4.widget.DrawerLayout>